# JNIProject

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/muxiaolei/helei/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: calculate.c  calculate.h
app/src/main/java/com/muxiaolei/helei/jnitest/: HomeActivity.java
app/src/main/java/com/muxiaolei/helei/util/: NativeHelper.java
app/src/main/res/layout/: activity_home.xml
app/src/test/java/com/muxiaolei/helei/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
